namespace Player
{
    public class Animations
    {
        public const string Lobbing = "grenade lob";
        public const string Landing = "landing";
    }

    public class Attributes
    {
        public const string Dashing = "dashing";
        public const string XSpeed = "xSpeed";
        public const string YSpeed = "ySpeed";
        public const string AnimationMultiplier = "walkSpeed";
    }
}